# BSGateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gateway.yaml  pyproject.toml  run-e2e-tests.sh  vercel.json
.agent/: progress.txt  tasks.json
.devcontainer/: docker-compose.yml
.devcontainer/scripts/: post-start.local.sh
.github/workflows/: cd.yml  ci.yml  demo-smoke.yml
alembic/: env.py
alembic/versions/: 0003_drop_api_keys.py  0004_models_and_tenant_isolation.py
bsgateway/api/: app.py  deps.py
bsgateway/apikey/: repository.py  service.py
bsgateway/audit/: events.py  service.py
bsgateway/chat/: service.py
bsgateway/cli/: __init__.py  _client.py  main.py
bsgateway/core/: cache.py  config.py  database.py  logging.py  migrate.py  seed.py
bsgateway/demo/: __init__.py  auth.py  gc.py  guard.py  jwt.py  router.py  seed.py  session.py
bsgateway/embedding/: factory.py  provider.py  serialization.py  service.py  settings.py
bsgateway/executor/: dispatcher.py
bsgateway/mcp/: README.md  admin_tools.py  api.py  lifespan.py  schemas.py  server.py  service.py
bsgateway/presets/: repository.py  service.py
bsgateway/routing/: collector.py  hook.py  models.py  models_repository.py  registry.py  strategies.py
bsgateway/rules/: budget.py  conditions.py  engine.py  models.py  repository.py  schemas.py
bsgateway/tenant/: models.py  repository.py  service.py
bsgateway/tests/: conftest.py  test_alembic_drop_api_keys.py  test_alembic_models_and_tenant_isolation.py  test_api_admin_models.py  test_api_auth.py  test_api_chat.py  test_api_presets.py  test_api_rules.py  test_api_tenants.py  test_app.py  test_audit.py  test_audit_events_phase3.py  test_audit_gap_security_regression.py  test_auth_bsvibe.py  test_auth_dispatch.py  test_authz_route_matrix.py  test_authz_scope_matrix.py  test_auto_provision.py  test_chat_service.py  test_chat_service_executor_streaming.py  test_chat_service_intent_classifier.py  test_cli_mcp.py  test_cli_models.py  test_cli_routes_rules_intents_presets.py  test_cli_skeleton.py  test_cli_tenants_audit_usage_feedback.py  test_cli_workers_execute.py  test_collector.py  test_conditions.py  test_config_token_cutover.py  test_database.py  test_demo_gc.py  test_demo_guard.py  test_demo_router.py  test_demo_seed.py  test_demo_session.py  test_design_tokens_drift.py  test_dispatcher.py  test_e2e_nexus_routing.py  test_e2e_supervisor_precheck.py  (+26 more)
deploy/: .env.demo.example  .env.example  Dockerfile  docker-compose.demo.yml  entrypoint.sh
docs/: EXECUTOR_MODEL_PINNING.md  TODO.md  scopes.md
frontend/: .gitignore  UI_GUIDE.md  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/app/: globals.css
frontend/e2e/: api-keys.spec.ts  auth-smoke.spec.ts  auth.spec.ts  cache.spec.ts  dashboard.spec.ts  demo-isolation.spec.ts  helpers.ts  i18n-parity.spec.ts  intents.spec.ts  locale-ko.spec.ts  mobile.spec.ts  models.spec.ts  navigation.spec.ts  responsive-table.spec.ts  routing-test.spec.ts  rules.spec.ts  simulator.spec.ts  ui.spec.ts  usage.spec.ts
frontend/i18n/: request.ts
frontend/messages/: gateway.en.json  gateway.ko.json
scripts/: run-e2e-tests.sh  seed_supabase.py  start-gateway.sh
worker/: executors.py  main.py
(+371 files in other folders)
