[project]
name = "bsgateway"
version = "0.1.0"
description = "LLM Gateway for cost-optimized routing across local, OpenAI, and Anthropic models"
requires-python = ">=3.11"
dependencies = [
    "litellm[proxy]>=1.60.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "pyyaml>=6.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "cryptography>=42.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    # Phase Audit Batch 2 — pin all bsvibe-python packages to
    # ``integration/phase-audit-batch-2`` (supersedes ``integration/phase-a``
    # by adding ``bsvibe-audit`` and ``bsvibe-llm`` on top of the four
    # Phase A packages: core/fastapi/sqlalchemy/authz/alerts). Single ref
    # so uv resolves the whole bsvibe-python graph from one commit.
    "bsvibe-core @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-core",
    "bsvibe-fastapi @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-fastapi",
    "bsvibe-sqlalchemy @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-sqlalchemy",
    "bsvibe-authz @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-authz",
    # Phase Audit Batch 2 — outbox-pattern audit emission for `gateway.*`
    # domain events. Lives only on ``integration/phase-audit-batch-2``
    # (the merge of ``feat/bsvibe-audit-impl`` + ``feat/bsvibe-llm-impl``
    # on top of ``integration/phase-a``).
    "bsvibe-audit @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-audit",
    # Phase 3 — Typer CLI base used by `bsgateway` admin CLI. Provides
    # cli_app factory, ProfileStore, OutputFormatter, CliHttpClient with
    # 401-refresh-retry, DeviceFlowClient. Pinned to ``main`` so the
    # workspace [tool.uv.sources] override applies during local dev.
    "bsvibe-cli-base @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-cli-base",
    # Demo stack helpers — JWT issuer, LLM mock guard, tenant GC. Lives
    # on feat/bsvibe-demo until published to main alongside the public
    # demo rollout. Override in ``[tool.uv.sources]`` (below) for local
    # dev against the workspace worktree.
    "bsvibe-demo @ git+https://github.com/BSVibe/bsvibe-python.git@main#subdirectory=packages/bsvibe-demo",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
bsgateway = "bsgateway.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bsgateway/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = [
    "B008",   # Depends() in default args is idiomatic FastAPI
    "B017",   # pytest.raises(Exception) is fine in tests
]

[tool.coverage.run]
source = ["bsgateway"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
